[package]
name = "json_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.23", features = ["blocking"]}
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
parsed_args = { path = "../parsed_args" }
