[package]
name = "web_api"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"]}
rocket_db_pools = {version = "0.2.0", features = ["sqlx_postgres"]}
serde = { version = "1.0.203", features = ["derive"]}
# serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio"] }
toml = "0.8.14"

